--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,14 @@ header p{
 
 #list > ul {
     display: flex;
+    list-style: none;
 }
 
 #list > ul > li {
     margin: 20px 30px 0 0 ;
     padding-bottom: 10px;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 img {
@@ -52,16 +53,22 @@ main {
     padding: 40px 0;
 }
 
+main li {
+    padding:10px 20px;
+    list-style:decimal;
+}
+
+.alphaList {
+    list-style: lower-alpha;
+    margin-left: 20px;
+}
+
 h2 {
     font-size: 30px;
     font-weight: 300;
 }
 
-ul{
-    list-style: none;
-}
-
-li {
+p {
     margin: 40px 0;
 }
 
